# Taiwan-Equity-Lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: data-sources.md  disclaimer.md  project-win-condition.md  research-methodology.md  usage-workflow.md
docs/releases/: v0.1.0.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.2.0.md  v0.20.0.md  v0.21.0.md  v0.22.0.md  v0.23.0.md  v0.24.0.md  v0.25.0.md  v0.26.0.md  v0.27.0.md  v0.28.0.md  v0.29.0.md  v0.3.0.md  v0.30.0.md  v0.31.0.md  v0.32.0.md  v0.33.0.md  v0.34.0.md  v0.35.0.md  v0.36.0.md  v0.37.0.md  v0.38.0.md  v0.39.0.md  v0.4.0.md  v0.40.0.md  v0.41.0.md  (+15 more)
examples/: README.md  industry_price_history.csv  research.csv  valuation.csv  watchlist.csv
tests/: test_cli.py  test_comparison.py  test_dashboard.py  test_dashboard_server.py  test_diagnostics.py  test_doctor.py  test_evidence_quality.py  test_fetcher.py  test_freshness.py  test_fundamental_review.py  test_handoff.py  test_handoff_pack.py  test_industry_trends.py  test_insights.py  test_market_price.py  test_memo.py  test_metrics.py  test_models.py  test_pack.py  test_parser.py  test_reliability.py  test_report.py  test_research.py  test_review_action_state.py  test_review_actions.py  test_scoring.py  test_traceability.py  test_trends.py  test_valuation.py  test_watchlist.py  test_workflow.py
(+111 files in other folders)
