[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taiwan-equity-lens"
version = "0.12.0"
description = "Taiwan equity fundamental analysis CLI and HTML report generator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
taiwan-equity-lens = "taiwan_stock_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
